modules/vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  instance_tenancy = "default"
  enable_dns_hostnames = true
  

  tags = {
    Name = "${var.project_name}-${var.environment}-vpc"
  }
}
